# Ros2TraceAnalyzer

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  clippy.toml  rustfmt.toml  todo.md
.github/workflows/: readme-help-sync.yml  ros-tests.yml  rust-extended-ci.yml  rust-stable-build.yml  rust.yml  rustfmt.yml
bt2-derive/: Cargo.toml
bt2-derive/examples/: simple_derive.rs
bt2-derive/src/: lib.rs
bt2-sys/: Cargo.toml  README.md  build.rs
bt2-sys/examples/: count_events.rs
bt2-sys/src/: clock_snapshot.rs  error.rs  event.rs  field.rs  iterator.rs  lib.rs  logging.rs  message.rs  query.rs  raw_bindings.rs  stream.rs  trace.rs  utils.rs  value.rs  wrappers.rs
bt2-sys/src-c/: graph.c  graph.h
bt2-sys/src/graph/: component.rs  mod.rs  plugin.rs  simple_sink.rs
py-src/: callback_duration.ipynb  e2e.ipynb  message_latency.ipynb
py-src/xdotviewer/: chart_window.py  main.py  r2ta_interface.py  ros_element.py  tooltip_widget.py
src/: analysis.rs  args.rs  argsv2.rs  events_common.rs  main.rs  model.rs  statistics.rs  utils.rs
src/analyses/: event_iterator.rs  mod.rs
src/analyses/analysis/: callback_dependency.rs  callback_duration.rs  dependency_graph.rs  message_latency.rs  message_take_to_callback_execution_latency.rs  mod.rs  publication_in_callback.rs  spin_duration.rs  utilization.rs  utils.rs
src/analysis/: callabck_duration.rs  callback_dependency.rs  callback_duration.rs  dependency_graph.rs  end_to_end.rs  message_latency.rs  message_take_to_callback_execution_latency.rs  mod.rs  publication_in_callback.rs  spin_duration.rs  utilization.rs  utils.rs
src/argsv2/: analysis_args.rs  chart_args.rs  extract_args.rs  helpers.rs  mod.rs  plot_args.rs  viewer_args.rs
src/charting/: axis_descriptor.rs  error.rs  mod.rs
src/charting/charts/: histogram.rs  mod.rs  scatter.rs
src/extract/: mod.rs
src/model/: display.rs  mod.rs
src/plotting/: axis_descriptor.rs  error.rs  mod.rs
src/plotting/plots/: histogram.rs  mod.rs  scatter.rs
src/processed_events/: mod.rs  r2r.rs  ros2.rs
src/processor/: error.rs  mod.rs  r2r.rs  ros2.rs
src/raw_events/: mod.rs  r2r.rs  ros2.rs
src/utils/: binary_sql_store.rs  mod.rs
src/utils/binary_sql_store/: mod.rs  v1.rs
src/visualization/: graphviz_export.rs  mod.rs
test/: README.md  add_two_ints_launch.xml  shell.nix  test.bats
test/nix/: sources.json
