[package]
name = "ctf_trace_reader_crust"
version = "0.1.0"
edition = "2021"

[dependencies]
bt2-sys = { path = "bt2-sys" }
bt2-derive = { path = "bt2-derive" }
chrono = "0.4.38"
derive_more = { version = "1.0.0", features = ["display", "from"] }
clap = { version = "4.5.20", features = ["derive"] }
walkdir = "2.5.0"
color-eyre = "0.6"


[workspace]
members = [ "bt2-derive","bt2-sys"]
