[package]
name = "ctf_trace_reader_crust"
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true

[dependencies]
bt2-sys = { path = "bt2-sys" }
bt2-derive = { path = "bt2-derive" }
chrono = "0.4.38"
derive_more = { version = "1.0.0", features = ["display", "from", "unwrap", "debug"] }
clap = { version = "4.5.20", features = ["derive"] }
walkdir = "2.5.0"
thiserror = "2.0"
color-eyre = "0.6"
csv = "1.3.1"
serde = { version = "1.0.214", features = ["derive"] }


[workspace]
members = ["bt2-derive", "bt2-sys"]

[workspace.package]
repository = "https://github.com/skoudmar/Ros2TraceAnalyzer.git"
authors = ["Martin Škoudlil <skoudmar@fel.cvut.cz>"]
