[package]
name = "Ros2TraceAnalyzer"
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true
license.workspace = true
categories = ["command-line-utilities", "development-tools::profiling", "science::robotics"]

[dependencies]
bt2-sys = { path = "bt2-sys" }
bt2-derive = { path = "bt2-derive" }
chrono = "0.4.38"
derive_more = { version = "1.0.0", features = ["debug", "display", "from", "into", "unwrap", "deref"] }
clap = { version = "4.5.20", features = ["derive"] }
walkdir = "2.5.0"
thiserror = "2.0"
color-eyre = "0.6"
serde = { version = "1.0.214", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
clap-verbosity-flag = "2.2.3"
colorgrad = "0.7.0"
serde_json = "1.0.133"


[workspace]
members = ["bt2-derive", "bt2-sys"]

[workspace.package]
repository = "https://github.com/skoudmar/Ros2TraceAnalyzer.git"
authors = ["Martin Škoudlil <skoudmar@fel.cvut.cz>"]
license = "MIT OR Apache-2.0"
