[package]
name = "bt2-sys"
description = "Low-level bindings to the Babeltrace 2 C API"
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true
license.workspace = true
categories = ["api-bindings"]

[dependencies]
derive_more = { version = "1.0.0", features = ["deref", "deref_mut", "from", "into"] }
thiserror = "2.0"

[build-dependencies]
bindgen = { version = "0.70.1", features = ["experimental"]}
cc = "1.0"
